--- a/frontend/loading.html
+++ b/frontend/loading.html
@@ -265,7 +265,7 @@
       }
 
       try {
-        const res = await fetch("http://127.0.0.1:8000/analyze", {
+        const res = await fetch("https://ink-insights-backend.onrender.com/analyze", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ text, filename: meta.name })
