--- a/frontend/index.html
+++ b/frontend/index.html
@@ -302,10 +302,11 @@ text-shadow:0 0 10px rgba(255,255,255,.35)
       <p class="img-credit">Image courtesy of <a href="https://www.pexels.com/" target="_blank">Pexels</a></p>
       <div class="slide-desc">
         <ul class="feature-points">
-          <li>Reveals the emotional tone of your text as positive, neutral, or negative.</li>
-          <li>Helps you understand your message’s emotional balance.</li>
-          <li>Useful for adjusting tone to match your intent.</li>
-          <li><strong>Chart Type:</strong> Doughnut chart showing sentiment distribution.</li>
+<li>Highlights the distribution of emotional patterns such as joy, sadness, anger, fear, disgust, and surprise within your text.</li>
+<li>Helps you understand which emotions dominate your writing and how they interact.</li>
+<li>Useful for exploring the underlying mood or emotional complexity of your message.</li>
+<li><strong>Chart Type:</strong> Radar chart visualizing emotional intensity across categories.</li>
+
         </ul>
       </div>
     </div>
