--- a/frontend/loading.html
+++ b/frontend/loading.html
@@ -273,7 +273,7 @@
   // === Otherwise, fetch backend ===
   try {
     console.log("🚀 Sending text to backend...");
-    const res = await fetch("http://127.0.0.1:8000/analyze", {
+    const res = await fetch("https://ink-insights-backend.onrender.com/analyze", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ text, filename: meta.name || "document.txt" })
