--- a/frontend/features.html
+++ b/frontend/features.html
@@ -308,7 +308,7 @@ View the ratio of positive, neutral, and negative tones to reflect on mood consi
   <div class="divider"></div>
   <p class="tagline">
 Explore the emotional and sensory landscape of your story. <br>
-Analyze how your words evoke the five core emotions and senses, giving you insight into tone and atmosphere.
+Analyze how your words evoke the six core emotions and senses, giving you insight into tone and atmosphere.
   </p>
 
   <!-- ===== Overview Panel ===== -->
